Use AdoptOpenJDK instead of Azul Zulu

--- a/nanoserver-jre/1809/Dockerfile
+++ b/nanoserver-jre/1809/Dockerfile
@@ -1,12 +1,12 @@
 FROM mcr.microsoft.com/windows/nanoserver:1809
 
-ARG DOWNLOADURL=https://repos.azul.com/azure-only/zulu/packages/zulu-8/8u202/zulu-8-azure-jre_8.36.0.3-8.0.202-win_x64.zip
+ARG DOWNLOADURL=https://github.com/AdoptOpenJDK/openjdk8-binaries/releases/download/jdk8u202-b08/OpenJDK8U-jre_x64_windows_hotspot_8u202b08.zip
 
 RUN \
     mkdir C:\jre\ && \
-    curl -o C:\jre\zulu.zip %DOWNLOADURL% && \
-    tar -C C:\jre\ --strip-components 1 -xf C:\jre\zulu.zip && \
-    del /f /q C:\jre\zulu.zip
+    curl -o C:\jre\jre.zip %DOWNLOADURL% && \
+    tar -C C:\jre\ --strip-components 1 -xf C:\jre\jre.zip && \
+    del /f /q C:\jre\jre.zip
 
 ENV PATH="C:\Windows\system32;C:\Windows;C:\jre\bin"
 
