Use AdoptOpenJDK instead of Azul Zulu

--- a/nanoserver-jre/sac2016/Dockerfile
+++ b/nanoserver-jre/sac2016/Dockerfile
@@ -1,13 +1,13 @@
 FROM mcr.microsoft.com/windows/nanoserver:sac2016
 
-ARG DOWNLOADURL=https://repos.azul.com/azure-only/zulu/packages/zulu-8/8u202/zulu-8-azure-jre_8.36.0.3-8.0.202-win_x64.zip
+ARG DOWNLOADURL=https://github.com/AdoptOpenJDK/openjdk8-binaries/releases/download/jdk8u202-b08/OpenJDK8U-jre_x64_windows_hotspot_8u202b08.zip
 
 RUN powershell -Command \
     $ProgressPreference = 'SilentlyContinue'; \
-    Invoke-WebRequest -Uri $env:DOWNLOADURL -OutFile 'C:\zulu.zip'; \
-    Expand-Archive -Path 'C:\zulu.zip' -DestinationPath 'C:\'; \
-    Remove-Item -Path 'C:\zulu.zip' -Force; \
-    $JreDir = Get-Item 'C:\zulu-*'; \
+    Invoke-WebRequest -Uri $env:DOWNLOADURL -OutFile 'C:\jre.zip'; \
+    Expand-Archive -Path 'C:\jre.zip' -DestinationPath 'C:\'; \
+    Remove-Item -Path 'C:\jre.zip' -Force; \
+    $JreDir = Get-Item 'C:\jdk*'; \
     Rename-Item $JreDir -NewName 'C:\jre' -Force; \
     $env:PATH += ';C:\jre\bin'; \
     setx /m PATH $env:PATH
